--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>01-Portfolio</title>
-  <link rel="stylesheet" href="css/slick.css">
+  <link rel="stylesheet" href="css/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-
 </head>
 
 <body>
@@ -77,59 +76,49 @@
   </header>
 
   <!-- ===================== Main Visual ===================== -->
-  <section class="p-hero">
-    <div class="p-hero__slider js-heroSlider">
-      <div class="p-hero__slide">
-        <img class="p-hero__image" src="images/mv_1.jpg" alt="">
+  <div class="p-hero-wrap">
+    <section class="p-hero swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="images/mv_1.jpg" alt="">
+        </div>
+        <div class="swiper-slide">
+          <img src="images/mv_2.jpg" alt="">
+        </div>
+        <div class="swiper-slide">
+          <img src="images/mv_3.jpg" alt="">
+        </div>
+        <div class="swiper-slide">
+          <img src="images/mv_4.jpg" alt="">
+        </div>
+        <div class="swiper-slide">
+          <img src="images/mv_5.jpg" alt="">
+        </div>
+        <div class="swiper-slide">
+          <img src="images/mv_6.jpg" alt="">
+        </div>
+        <div class="swiper-slide">
+          <img src="images/mv_7.jpg" alt="">
+        </div>
+        <div class="swiper-slide">
+          <img src="images/mv_8.jpg" alt="">
+        </div>
+        <div class="swiper-slide">
+          <img src="images/mv_9.jpg" alt="">
+        </div>
+        <div class="swiper-slide">
+          <img src="images/mv_10.jpg" alt="">
+        </div>
       </div>
-      <div class="p-hero__slide">
-        <img class="p-hero__image" src="images/mv_2.jpg" alt="">
-      </div>
-      <div class="p-hero__slide">
-        <img class="p-hero__image" src="images/mv_3.jpg" alt="">
-      </div>
-      <div class="p-hero__slide">
-        <img class="p-hero__image" src="images/mv_4.jpg" alt="">
-      </div>
-      <div class="p-hero__slide">
-        <img class="p-hero__image" src="images/mv_5.jpg" alt="">
-      </div>
-      <div class="p-hero__slide">
-        <img class="p-hero__image" src="images/mv_6.jpg" alt="">
-      </div>
-      <div class="p-hero__slide">
-        <img class="p-hero__image" src="images/mv_7.jpg" alt="">
-      </div>
-      <div class="p-hero__slide">
-        <img class="p-hero__image" src="images/mv_8.jpg" alt="">
-      </div>
-      <div class="p-hero__slide">
-        <img class="p-hero__image" src="images/mv_9.jpg" alt="">
-      </div>
-      <div class="p-hero__slide">
-        <img class="p-hero__image" src="images/mv_10.jpg" alt="">
-      </div>
-    </div>
-  </section>
 
-  <!-- ===================== Event Section ===================== -->
-  <section class="p-event">
-    <h2 class="c-section-title">EVENT & CAMPAIGN</h2>
+      <!-- navigation -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
 
-    <ul class="p-event__list">
-      <li class="c-card">
-        <img src="images/event01.jpg" alt="">
-        <h3>春のフェア開催中</h3>
-        <p>2026.03.01 - 03.31</p>
-      </li>
-
-      <li class="c-card">
-        <img src="images/event01.jpg" alt="">
-        <h3>期間限定POP UP</h3>
-        <p>2026.02.15 - 02.28</p>
-      </li>
-    </ul>
-  </section>
+      <!-- pagination -->
+      <div class="swiper-pagination"></div>
+    </section>
+  </div>
 
   <!-- ===================== Shop Section ===================== -->
   <section class="p-shop">
@@ -160,8 +149,8 @@
     <p class="l-footer__copy">コピーライト</p>
   </footer>
   <script src="https://unpkg.com/feather-icons"></script>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/slick.min.js"></script>
+
+  <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
