--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
   <!-- ===================== Main Visual ===================== -->
   <div class="p-hero-wrap">
     <section class="p-hero swiper">
+      <!-- /スライドを横並びにするコンテナ swiper-wrapper -->
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <img src="images/mv_1.jpg" alt="">
